--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,17 +3,22 @@ margin: 0;
 padding: 0;
 box-sizing: border-box;
 }
+html{
+    height: 100%;
+}
 
 body{
     margin: 10px;
     padding: 15px;
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
 }
 
 header{
     color: #fff;
     text-shadow: 2px 1px 10px black;
 }
-
 
 
 .menu{
@@ -223,6 +228,7 @@ footer{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 25px;
     text-transform: capitalize;
+    margin-top: auto;
 }
 footer i{
     font-size: 40px;
