--- a/css/estilos.css
+++ b/css/estilos.css
@@ -12,7 +12,7 @@ body{
     padding: 15px;
     display: flex;
     flex-direction: column;
-    min-height: 100%;
+    min-height: 100vh;
 }
 
 header{
@@ -54,7 +54,8 @@ main{
 }
 .portada{
     background-color: #1e00958c;
-    width: 50%;
+    width: 100%;
+    margin: 20px;
     padding: 20px;
     float: right;
 
@@ -162,7 +163,7 @@ h2{
 
 .galeria{
     background-color: #214de8;
-    min-height: 600px;
+    min-height: 100vh;
     width: 100%;
     display: grid;
     grid-template-columns: repeat(1,1fr);
@@ -222,13 +223,14 @@ h2{
 footer{
     background-color: #00586b;
     width: 100%;
-    margin: 5px;
-    padding: 10px;
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 25px;
     text-transform: capitalize;
     margin-top: auto;
+    bottom: 0;
+    margin-top: 15px;
+    
 }
 footer i{
     font-size: 40px;
