--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,285 +1,298 @@
-*{
-margin: 0;
-padding: 0;
-box-sizing: border-box;
-}
-html{
-    height: 100%;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body{
-    margin: 10px;
-    padding: 15px;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+html {
+  height: 100%;
 }
 
-header{
-    color: #fff;
-    text-shadow: 2px 1px 10px black;
+body {
+  margin: 10px;
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  text-align: center;
+}
+body header {
+  color: #fff;
+  text-shadow: 2px 1px 10px black;
+}
+body header h3 {
+  font-size: large;
+  background-color: #44c7f4;
+  padding: 15px;
+}
+body header h3 P {
+  color: #f50537;
 }
 
-
-.menu{
-    cursor: pointer;
+.menu {
+  cursor: pointer;
 }
 
-.navbar{
-    background-color: #00586b;
-    margin: 10px;
-    padding: 20px;
-    
+.navbar {
+  background-color: #00586b;
+  margin: 10px;
+  padding: 20px;
 }
 
-
-.jumbotron{
-    background-image: url(../img/rm14.jpg);
-    background-size: cover;
-    height: 350px;
+.jumbotron {
+  background-image: url(../img/rm14.jpg);
+  background-size: cover;
+  height: 350px;
 }
 
-.btn-success{
-    background-color: #00586b ;
-}
-main{
-    height: 600px;
-    width: 100%;
-    background-image: url(../img/RM13.jpg);
-    background-size: cover; 
-    background-position: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.portada{
-    background-color: #1e00958c;
-    width: 100%;
-    margin: 20px;
-    padding: 20px;
-    float: right;
-
-}
-.boton1{
-    background-color: #1e00959e;
-    text-decoration: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    color: #fff;
-}
-.portada p{
-    margin-bottom: 20px;
+.btn-success {
+  background-color: #00586b;
 }
 
-.transition{
-    height: 12;
-    margin: 10px;
-    padding: 10px;
-    text-align: center;
-    border: 4px solid;
-   
+main {
+  height: 600px;
+  width: 100%;
+  background-image: url(../img/RM13.jpg);
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-#t1{
-    transition: height 2.7s;
-
+.portada {
+  background-color: rgba(30, 0, 149, 0.5490196078);
+  width: 100%;
+  margin: 20px;
+  padding: 20px;
+  float: right;
 }
 
-#t1:hover{
-    height: 250px;
-    
+.boton1 {
+  background-color: rgba(30, 0, 149, 0.6196078431);
+  text-decoration: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  color: #fff;
 }
 
-ul{
-    list-style: none;
-    background-color: #d0d2d3;
-    border: 20px;
-    font-size: 30px;
+.portada p {
+  margin-bottom: 20px;
 }
 
-li{ 
-    display: inline-block;
-    width: 15%;
-    position: relative;
-    font-size: 30px;
+.transition {
+  height: 12;
+  margin: 10px;
+  padding: 10px;
+  text-align: center;
+  border: 4px solid;
 }
 
-li a { text-decoration: none;
+#t1 {
+  transition: height 2.7s;
 }
 
-li a:hover { 
-    color: #f50537;
+#t1:hover {
+  height: 250px;
 }
 
-.futbol{
-    height: 400px;
-    width: 1000px;
-    background-image: url(../img/estadiodefutbol.jpg);
-    background-color: #d0d2d3;
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
-}
-h1{
-    background-color: #44c7f4;
-}
-.color{
-    color:#44c7f4
-}
-.boxmodel{
-    width: 100%;
-    height: 300px;
-    border: 10px solid black;
-    background-color: #d0d2d3;
-    margin: 10px;
-    padding: 10px;
-    position: relative;
+ul {
+  list-style: none;
+  background-color: #d0d2d3;
+  border: 20px;
+  font-size: 30px;
 }
 
-.nleft{
-    background-image: url(../img/rm15.jpg) ;
-    height: 300px;
-    background-size: cover;
-    background-position: center;
+li {
+  display: inline-block;
+  width: 15%;
+  position: relative;
+  font-size: 30px;
 }
 
-
-
-h2{
-    background-color: #00586b;
-    color: #fff;
-    text-align: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 40px;
-    padding: 10px;
-
+li a {
+  text-decoration: none;
 }
 
-.animaciones{
-    height: 50px;
-    width: 50px;
-   
+li a:hover {
+  color: #f50537;
 }
 
-.galeria{
-    background-color: #214de8;
-    min-height: 100vh;
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(1,1fr);
-    grid-template-rows: repeat(8,200px);
-    padding: 20px;
-    grid-gap: 20px;
-
-}
-.item{
-    border-radius: 30px;
-    border: 5px solid #00586b;
-    background-repeat: no-repeat;
-   
-}
-.item1{
-    background-image: url(../img/rm10.jpg);
-    background-position: center;
-    background-size: 100% 100%;
-    
-}
-.item2{
-    background-image: url(../img/rm2.jpg);
-    background-position: center;
-    background-size: 100% 100%;
-}
-.item3{
-    background-image: url(../img/rm1.jpg);
-    background-position: center;
-    background-size: 100% 100%;
-}
-.item4{
-    background-image: url(../img/rm11.jpg);
-    background-position: center;
-    background-size: 100% 100%;
-}
-.item5{
-    background-image: url(../img/rm9.jpeg);
-    background-position: center;
-    background-size: 100% 100%;
-    
-}
-.item6{
-    background-image: url(../img/rm6.jpg);
-    background-position: center;
-    background-size: 100% 100%;
-}.item7{
-    background-image: url(../img/rm7.jpg);
-    background-position: center;
-    background-size: 100% 100%;
-}
-.item8{
-    background-image: url(../img/rm12.jpg);
-    background-position: center;
-    background-size: 100% 100%;
+.futbol {
+  height: 400px;
+  width: 1000px;
+  background-image: url(../img/estadiodefutbol.jpg);
+  background-color: #d0d2d3;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
-footer{
-    background-color: #00586b;
-    width: 100%;
-    text-align: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 25px;
-    text-transform: capitalize;
-    margin-top: auto;
-    bottom: 0;
-    margin-top: 15px;
-    
-}
-footer i{
-    font-size: 40px;
-    color: #fff;
-    letter-spacing: 20px;
-    padding: 20px;
-    margin-top: 20px;
+h1 {
+  background-color: #44c7f4;
 }
 
-@media only screen and (min-width: 500px) { 
-    .galeria{
-        grid-template-columns: 1fr 1fr;
-    }
+.color {
+  color: #44c7f4;
 }
 
-@media only screen and (min-width:800px){
-    .galeria{
-        grid-template-columns: repeat(3, 1fr);
-    }
-    .item1{
-        grid-column: 1/3;
-        grid-row: 1/2;
-    }
-    .item2{
-        grid-column: 3/4;
-        grid-row: 1/2;
-    }
-    .item3{
-        grid-column: 1/2;
-        grid-row: 2/3;
-    }
-    .item4{
-        grid-column: 2/4;
-        grid-row: 2/3;
-    }
-    .item5{
-        grid-column: 1/3;
-        grid-row: 3/4;
-    }
-    .item6{
-        grid-column: 3/4;
-        grid-row: 3/4;
-    }
-    .item7{
-        grid-column: 1/2;
-        grid-row: 4/5;
-    }
-    .item8{
-        grid-column: 2/4;
-        grid-row: 4/5;
-    }
+.boxmodel {
+  width: 100%;
+  height: 300px;
+  border: 10px solid black;
+  background-color: #d0d2d3;
+  margin: 10px;
+  padding: 10px;
+  position: relative;
 }
+
+.nleft {
+  background-image: url(../img/rm15.jpg);
+  height: 300px;
+  background-size: cover;
+  background-position: center;
+}
+
+h2 {
+  background-color: #00586b;
+  color: #fff;
+  text-align: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 40px;
+  padding: 10px;
+}
+
+.animaciones {
+  height: 50px;
+  width: 50px;
+}
+
+.galeria {
+  background-color: #214de8;
+  min-height: 100vh;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-rows: repeat(8, 200px);
+  padding: 20px;
+  grid-gap: 20px;
+}
+
+.item {
+  border-radius: 30px;
+  border: 5px solid #00586b;
+  background-repeat: no-repeat;
+}
+
+.item1 {
+  background-image: url(../img/rm10.jpg);
+  background-position: center;
+  background-size: 100% 100%;
+}
+
+.item2 {
+  background-image: url(../img/rm2.jpg);
+  background-position: center;
+  background-size: 100% 100%;
+}
+
+.item3 {
+  background-image: url(../img/rm1.jpg);
+  background-position: center;
+  background-size: 100% 100%;
+}
+
+.item4 {
+  background-image: url(../img/rm11.jpg);
+  background-position: center;
+  background-size: 100% 100%;
+}
+
+.item5 {
+  background-image: url(../img/rm9.jpeg);
+  background-position: center;
+  background-size: 100% 100%;
+}
+
+.item6 {
+  background-image: url(../img/rm6.jpg);
+  background-position: center;
+  background-size: 100% 100%;
+}
+
+.item7 {
+  background-image: url(../img/rm7.jpg);
+  background-position: center;
+  background-size: 100% 100%;
+}
+
+.item8 {
+  background-image: url(../img/rm12.jpg);
+  background-position: center;
+  background-size: 100% 100%;
+}
+
+footer {
+  background-color: #00586b;
+  width: 100%;
+  text-align: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 25px;
+  text-transform: capitalize;
+  margin-top: auto;
+  bottom: 0;
+  margin-top: 15px;
+}
+
+footer i {
+  font-size: 40px;
+  color: #fff;
+  letter-spacing: 20px;
+  padding: 20px;
+  margin-top: 20px;
+}
+
+@media only screen and (min-width: 500px) {
+  .galeria {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media only screen and (min-width: 800px) {
+  .galeria {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .item1 {
+    grid-column: 1/3;
+    grid-row: 1/2;
+  }
+  .item2 {
+    grid-column: 3/4;
+    grid-row: 1/2;
+  }
+  .item3 {
+    grid-column: 1/2;
+    grid-row: 2/3;
+  }
+  .item4 {
+    grid-column: 2/4;
+    grid-row: 2/3;
+  }
+  .item5 {
+    grid-column: 1/3;
+    grid-row: 3/4;
+  }
+  .item6 {
+    grid-column: 3/4;
+    grid-row: 3/4;
+  }
+  .item7 {
+    grid-column: 1/2;
+    grid-row: 4/5;
+  }
+  .item8 {
+    grid-column: 2/4;
+    grid-row: 4/5;
+  }
+}
+
+/*# sourceMappingURL=estilos.css.map */
