--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -37,6 +37,10 @@
         background-image: url(../img/rm14.jpg);
         background-size: cover;
         height: 350px;
+        p{
+            background-color: #44c7f4;
+        }
+       
     }
     
     .btn-success{
