--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,6 +8,19 @@ html {
   height: 100%;
 }
 
+.equipos {
+  height: 100%;
+  width: 100%;
+  margin: 10px;
+}
+
+.equipos {
+  color: #214de8;
+  background-image: url(../img/barcelona.jpg);
+  background-position: center;
+  background-size: cover;
+}
+
 body {
   margin: 10px;
   padding: 15px;
@@ -156,6 +169,11 @@ h2 {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 40px;
   padding: 10px;
+}
+
+.equipos {
+  height: 400px;
+  width: 700px;
 }
 
 .animaciones {
