--- a/css/estilos.css
+++ b/css/estilos.css
@@ -21,6 +21,12 @@ html {
   background-size: cover;
 }
 
+.realmixin {
+  height: 400px;
+  width: 100%;
+  background-color: red;
+}
+
 body {
   margin: 10px;
   padding: 15px;
