--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,16 +9,11 @@ html {
 }
 
 .equipos {
-  height: 100%;
-  width: 100%;
-  margin: 10px;
-}
-
-.equipos {
   color: #214de8;
   background-image: url(../img/barcelona.jpg);
   background-position: center;
-  background-size: cover;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .realmixin {
@@ -34,6 +29,9 @@ body {
   flex-direction: column;
   min-height: 100vh;
   text-align: center;
+  position: relative;
+  width: 100%;
+  padding-bottom: 220px;
 }
 
 header {
@@ -154,10 +152,10 @@ h1 {
 .boxmodel {
   width: 100%;
   height: 300px;
-  border: 10px solid black;
+  border: 5px solid black;
   background-color: #d0d2d3;
-  margin: 10px;
-  padding: 10px;
+  margin: 5px;
+  padding: 5px;
   position: relative;
 }
 
@@ -166,6 +164,7 @@ h1 {
   height: 300px;
   background-size: cover;
   background-position: center;
+  width: 100%;
 }
 
 h2 {
@@ -193,7 +192,7 @@ h2 {
   width: 100%;
   display: grid;
   grid-template-columns: repeat(1, 1fr);
-  grid-template-rows: repeat(8, 200px);
+  grid-template-rows: repeat(4, 200px);
   padding: 20px;
   grid-gap: 20px;
 }
@@ -262,6 +261,7 @@ footer {
   margin-top: auto;
   bottom: 0;
   margin-top: 15px;
+  position: absolute;
 }
 
 footer i {
