--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -13,21 +13,13 @@
     $img4: newcastle;
     $equipo: $img1 ;
 
-
-    .equipos{
-        height: 100%;
-        width: 100%;
-        margin: 10px;
-
-    }
-
     .equipos{
         @if $equipo==$img1 {
             color: #214de8;
             background-image: url(../img/barcelona.jpg);
             background-position: center;
-            background-size: cover;
-            
+            background-repeat: no-repeat;
+            background-size: contain;
         }
     }
 
@@ -49,6 +41,10 @@
         flex-direction: column;
         min-height: 100vh;
         text-align: center;
+        position: relative;
+        width: 100%;
+        padding-bottom: 220px;
+
     }
 
     header{
@@ -168,10 +164,10 @@
     .boxmodel{
         width: 100%;
         height: 300px;
-        border: 10px solid black;
+        border: 5px solid black;
         background-color: #d0d2d3;
-        margin: 10px;
-        padding: 10px;
+        margin: 5px;
+        padding: 5px;
         position: relative;
     }
     
@@ -180,6 +176,7 @@
         height: 300px;
         background-size: cover;
         background-position: center;
+        width: 100%;
     }
     
     
@@ -212,7 +209,7 @@
         width: 100%;
         display: grid;
         grid-template-columns: repeat(1,1fr);
-        grid-template-rows: repeat(8,200px);
+        grid-template-rows: repeat(4,200px);
         padding: 20px;
         grid-gap: 20px;
     
@@ -275,6 +272,7 @@
         margin-top: auto;
         bottom: 0;
         margin-top: 15px;
+        position: absolute;
         
     }
     footer i{
