--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,6 +6,7 @@
 
 html {
   height: 100%;
+  overflow-x: hidden;
 }
 
 .equipos {
@@ -24,7 +25,7 @@ html {
 
 body {
   margin: 10px;
-  padding: 15px;
+  padding: 10px;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -45,8 +46,6 @@ header {
 
 .navbar {
   background-color: #00586b;
-  margin: 10px;
-  padding: 20px;
 }
 
 .jumbotron {
@@ -63,7 +62,7 @@ header {
 }
 
 main {
-  height: 600px;
+  height: 400px;
   width: 100%;
   background-image: url(../img/RM13.jpg);
   background-size: cover;
@@ -76,8 +75,8 @@ main {
 .portada {
   background-color: rgba(30, 0, 149, 0.5490196078);
   width: 100%;
-  margin: 20px;
-  padding: 20px;
+  margin: 10px;
+  padding: 10px;
   float: right;
 }
 
@@ -193,7 +192,7 @@ h2 {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   grid-template-rows: repeat(4, 200px);
-  padding: 20px;
+  padding: 100px;
   grid-gap: 20px;
 }
 
@@ -204,7 +203,7 @@ h2 {
 }
 
 .item1 {
-  background-image: url(../img/rm10.jpg);
+  background-image: url(../img/Rm20.jpg);
   background-position: center;
   background-size: 100% 100%;
 }
@@ -279,14 +278,14 @@ footer i {
 }
 @media only screen and (min-width: 800px) {
   .galeria {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
   }
   .item1 {
-    grid-column: 1/3;
+    grid-column: 1/2;
     grid-row: 1/2;
   }
   .item2 {
-    grid-column: 3/4;
+    grid-column: 2/3;
     grid-row: 1/2;
   }
   .item3 {
@@ -294,15 +293,15 @@ footer i {
     grid-row: 2/3;
   }
   .item4 {
-    grid-column: 2/4;
+    grid-column: 2/3;
     grid-row: 2/3;
   }
   .item5 {
-    grid-column: 1/3;
+    grid-column: 1/2;
     grid-row: 3/4;
   }
   .item6 {
-    grid-column: 3/4;
+    grid-column: 2/3;
     grid-row: 3/4;
   }
   .item7 {
@@ -310,7 +309,7 @@ footer i {
     grid-row: 4/5;
   }
   .item8 {
-    grid-column: 2/4;
+    grid-column: 2/3;
     grid-row: 4/5;
   }
 }
