--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -5,6 +5,7 @@
     }
     html{
         height: 100%;
+        overflow-x: hidden;
     }
 
     $img1: barcelona;
@@ -36,7 +37,7 @@
     
     body{
         margin: 10px;
-        padding: 15px;
+        padding: 10px;
         display: flex;
         flex-direction: column;
         min-height: 100vh;
@@ -58,9 +59,6 @@
     
     .navbar{
         background-color: #00586b;
-        margin: 10px;
-        padding: 20px;
-        
     }
     
     
@@ -78,7 +76,7 @@
         background-color: #00586b ;
     }
     main{
-        height: 600px;
+        height: 400px;
         width: 100%;
         background-image: url(../img/RM13.jpg);
         background-size: cover; 
@@ -90,8 +88,8 @@
     .portada{
         background-color: #1e00958c;
         width: 100%;
-        margin: 20px;
-        padding: 20px;
+        margin: 10px;
+        padding: 10px;
         float: right;
     
     }
@@ -210,7 +208,7 @@
         display: grid;
         grid-template-columns: repeat(1,1fr);
         grid-template-rows: repeat(4,200px);
-        padding: 20px;
+        padding: 100px;
         grid-gap: 20px;
     
     }
@@ -221,7 +219,7 @@
        
     }
     .item1{
-        background-image: url(../img/rm10.jpg);
+        background-image: url(../img/Rm20.jpg);
         background-position: center;
         background-size: 100% 100%;
         
@@ -291,14 +289,14 @@
     
     @media only screen and (min-width:800px){
         .galeria{
-            grid-template-columns: repeat(3, 1fr);
+            grid-template-columns: repeat(2, 1fr);
         }
         .item1{
-            grid-column: 1/3;
+            grid-column: 1/2;
             grid-row: 1/2;
         }
         .item2{
-            grid-column: 3/4;
+            grid-column: 2/3;
             grid-row: 1/2;
         }
         .item3{
@@ -306,15 +304,15 @@
             grid-row: 2/3;
         }
         .item4{
-            grid-column: 2/4;
+            grid-column: 2/3;
             grid-row: 2/3;
         }
         .item5{
-            grid-column: 1/3;
+            grid-column: 1/2;
             grid-row: 3/4;
         }
         .item6{
-            grid-column: 3/4;
+            grid-column: 2/3;
             grid-row: 3/4;
         }
         .item7{
@@ -322,7 +320,7 @@
             grid-row: 4/5;
         }
         .item8{
-            grid-column: 2/4;
+            grid-column: 2/3;
             grid-row: 4/5;
         }
     }
