modificaciones varias en estilos

--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -88,8 +88,8 @@
     .portada{
         background-color: #1e00958c;
         width: 100%;
-        margin: 10px;
-        padding: 10px;
+        margin: 0;
+        padding: 100px;
         float: right;
     
     }
