--- a/css/estilos.css
+++ b/css/estilos.css
@@ -75,8 +75,8 @@ main {
 .portada {
   background-color: rgba(30, 0, 149, 0.5490196078);
   width: 100%;
-  margin: 10px;
-  padding: 10px;
+  margin: 0;
+  padding: 100px;
   float: right;
 }
 
