--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -96,46 +96,6 @@
         margin-top: 10px;
     }
     
-    .transition{
-        height: 12;
-        margin: 10px;
-        padding: 10px;
-        text-align: center;
-        border: 4px solid;
-       
-    }
-    
-    #t1{
-        transition: height 2.7s;
-    
-    }
-    
-    #t1:hover{
-        height: 250px;
-        
-    }
-    
-    ul{
-        list-style: none;
-        background-color: #d0d2d3;
-        border: 20px;
-        font-size: 30px;
-    }
-    
-    li{ 
-        display: inline-block;
-        width: 15%;
-        position: relative;
-        font-size: 30px;
-    }
-    
-    li a { text-decoration: none;
-    }
-    
-    li a:hover { 
-        color: #f50537;
-    }
-    
     .futbol{
         height: 400px;
         width: 1000px;
@@ -153,12 +113,13 @@
     }
     .boxmodel{
         width: 100%;
-        height: 300px;
+        height: 200px;
         border: 5px solid black;
         background-color: #d0d2d3;
         margin: 5px;
         padding: 5px;
         position: relative;
+        text-align: justify;
     }
     
     .nleft{
@@ -181,12 +142,6 @@
     
     }
 
-    .equipos{
-        height: 400px;
-        width: 700px;
-    }
-
-    
     .animaciones{
         height: 50px;
         width: 50px;
@@ -254,7 +209,7 @@
         background-position: center;
         background-size: 100% 100%;
     }
-    
+/* Inicio de estilos generales del footer*/
     footer{
         background-color: #00586b;
         width: 100%;
@@ -265,9 +220,9 @@
         margin-top: auto;
         bottom: 0;
         margin-top: 15px;
-        position: absolute;
-        
+        position: absolute;    
     }
+
     footer i{
         font-size: 40px;
         color: #fff;
@@ -275,6 +230,7 @@
         padding: 20px;
         margin-top: 20px;
     }
+/* Fin de estilos generales del footer*/
     
     @media only screen and (max-width: 380px) { 
         .galeria{
@@ -282,8 +238,7 @@
             margin: 0;
             margin-bottom: 20px;
             grid-template-rows: repeat(8,);
-            grid-template-columns: repeat(1,1fr)   
-            
+            grid-template-columns: repeat(1,1fr)     
         }
 
         .item1{
@@ -305,7 +260,19 @@
             padding: 100px;
             margin-bottom: 40px;
         }
-    
+/* Inicio de estilos para la página de EMPRESAS*/
+        .jumbotron{
+            height: 200px;
+        }
+
+        .boxmodel{
+            height: 750px;
+            margin: 0;
+            margin-bottom: 10px;
+        }
+/*Fin de estilos para la página de EMPRESAS*/
+
+/*Inicio de estilos para Footer*/
         footer{
             font-size: 16px;
             margin-top: 30px;
@@ -314,28 +281,92 @@
             letter-spacing: 5px;
             padding: 5px;
             position: relative;
-            
         }
+/*Fin de estilos para Footer*/
+
+/*Inicio de estilos para orden jerarquico*/
         h1{
             font-size: 20px;
         }
         h2{
             font-size: 20px;
         }
+        h3{
+            font-size: 20px;
+        }
         .portada p{
             color:#fff
         }
-
     }
+    /*Fin de estilos para orden jerarquico*/
 
-    @media only screen and (max-width: 530px){
+    /*Inicio estilos pagina de PRODUCTOS*/
+
+        .futbol{
+            width: 100%;
+            height: 100px;
+            background-position: center;
+            background-size: cover;
+            margin-top: 10px;
+        }
+    /*Fin de estilos de página de PRODUCTOS*/
+
+    /*Inicio de estilos de página de HISTORIA*/
+
+    .table{
+        height: 400px;
+        
+    }
+        
+      
+    
+
+
+    @media only screen and (min-width: 381px){
         h1{
             font-size: 25px;
         }
-       
 
+        h2{
+            font-size: 25px;
+        }
+        h3{
+            font-size: 25px;
+        }
+        .portada p{
+            color: #d0d2d3;
+        }
+    
 
+        .galeria{
+            padding: 0;
+            margin: 0;
+            margin-bottom: 20px;
+            grid-template-rows: repeat(8,);
+            grid-template-columns: repeat(1,1fr)   
+            
+        }
         
+    }
+
+    .item1{
+        margin-top: 15px;
+    }
+
+    .item5{
+        padding: 100px;
+    }
+
+    .item6{
+        padding: 100px;
+    }
+
+    .item7{
+        padding: 100px;
+    }
+    .item8{
+        padding: 100px;
+        margin-bottom: 40px;
     }
 
         
@@ -378,3 +409,6 @@
             grid-row: 4/5;
         }
     }
+
+  
+       
