--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -1,9 +1,10 @@
-    *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
     }
-    html{
+
+    html {
         height: 100%;
         overflow-x: hidden;
     }
@@ -12,9 +13,9 @@
     $img2: inter;
     $img3: liverpool;
     $img4: newcastle;
-    $equipo: $img1 ;
+    $equipo: $img1;
 
-    .equipos{
+    .equipos {
         @if $equipo==$img1 {
             color: #214de8;
             background-image: url(../img/barcelona.jpg);
@@ -25,8 +26,8 @@
     }
 
 
-    
-    body{
+
+    body {
         margin: 10px;
         padding: 10px;
         display: flex;
@@ -39,64 +40,71 @@
 
     }
 
-    header{
+    header {
         color: #fff;
         text-shadow: 2px 1px 10px black;
     }
 
-    .menu{
+    .menu {
         cursor: pointer;
     }
-    
-    .navbar{
+
+    .navbar {
         background-color: #00586b;
+        width: 100%;
+        font-size: 20px;
     }
-    
-    
-    .jumbotron{
+
+
+    .jumbotron {
         background-image: url(../img/rm14.jpg);
         background-size: cover;
         height: 350px;
-        p{
+
+        p {
             background-color: #44c7f4;
         }
-       
+
     }
-    
-    .btn-success{
-        background-color: #00586b ;
+
+    .btn-success {
+        background-color: #00586b;
     }
-    main{
+
+    main {
         height: 400px;
         width: 100%;
         background-image: url(../img/RM13.jpg);
-        background-size: cover; 
+        background-size: cover;
         background-position: center;
         display: flex;
         justify-content: center;
         align-items: center;
     }
-    .portada{
+
+    .portada {
         background-color: #1e00958c;
         width: 100%;
         margin: 0;
         padding: 100px;
         float: right;
-    
+
     }
-    .boton1{
+
+    .boton1 {
         background-color: #1e00959e;
         text-decoration: none;
         padding: 10px 20px;
         border-radius: 5px;
         color: #fff;
     }
-    .portada p{
+
+    .portada p {
         margin-bottom: 20px;
         margin-top: 10px;
     }
-    
-    .futbol{
+
+    .futbol {
         height: 400px;
         width: 1000px;
         background-image: url(../img/estadiodefutbol.jpg);
@@ -105,13 +113,16 @@
         background-position: center;
         background-repeat: no-repeat;
     }
-    h1{
+
+    h1 {
         background-color: #44c7f4;
     }
-    .color{
-        color:#44c7f4
+
+    .color {
+        color: #44c7f4
     }
-    .boxmodel{
+
+    .boxmodel {
         width: 100%;
         height: 200px;
         border: 5px solid black;
@@ -121,96 +132,101 @@
         position: relative;
         text-align: justify;
     }
-    
-    .nleft{
-        background-image: url(../img/rm15.jpg) ;
+
+    .nleft {
+        background-image: url(../img/rm15.jpg);
         height: 300px;
         background-size: cover;
         background-position: center;
         width: 100%;
     }
-    
-    
-    
-    h2{
+
+
+
+    h2 {
         background-color: #00586b;
         color: #fff;
         text-align: center;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         font-size: 40px;
         padding: 10px;
-    
+
     }
 
-    .animaciones{
-        height: 50px;
-        width: 50px;
-       
-    }
-    
-    .galeria{
+    .galeria {
         background-color: #214de8;
         min-height: 100vh;
         width: 100%;
         display: grid;
-        grid-template-columns: repeat(1,1fr);
-        grid-template-rows: repeat(4,200px);
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(4, 200px);
         padding: 100px;
         grid-gap: 20px;
         margin-bottom: 20px;
         margin-top: 10px;
-        
-    
+
+
     }
-    .item{
+
+    .item {
         border-radius: 30px;
         border: 5px solid #00586b;
         background-repeat: no-repeat;
-       
+
     }
-    .item1{
+
+    .item1 {
         background-image: url(../img/Rm20.jpg);
         background-position: center;
         background-size: 100% 100%;
-        
+
     }
-    .item2{
+
+    .item2 {
         background-image: url(../img/rm2.jpg);
         background-position: center;
         background-size: 100% 100%;
     }
-    .item3{
+
+    .item3 {
         background-image: url(../img/rm1.jpg);
         background-position: center;
         background-size: 100% 100%;
     }
-    .item4{
+
+    .item4 {
         background-image: url(../img/rm11.jpg);
         background-position: center;
         background-size: 100% 100%;
     }
-    .item5{
+
+    .item5 {
         background-image: url(../img/rm9.jpg);
         background-position: center;
         background-size: 100% 100%;
-        
+
     }
-    .item6{
+
+    .item6 {
         background-image: url(../img/rm6.jpg);
         background-position: center;
         background-size: 100% 100%;
-    }.item7{
+    }
+
+    .item7 {
         background-image: url(../img/rm7.jpg);
         background-position: center;
         background-size: 100% 100%;
     }
-    .item8{
+
+    .item8 {
         background-image: url(../img/rm12.jpg);
         background-position: center;
         background-size: 100% 100%;
     }
-/* Inicio de estilos generales del footer*/
-    footer{
+
+    /* Inicio de estilos generales del footer*/
+    footer {
         background-color: #00586b;
         width: 100%;
         text-align: center;
@@ -220,195 +236,293 @@
         margin-top: auto;
         bottom: 0;
         margin-top: 15px;
-        position: absolute;    
+        position: absolute;
     }
 
-    footer i{
+    footer i {
         font-size: 40px;
         color: #fff;
         letter-spacing: 20px;
         padding: 20px;
         margin-top: 20px;
     }
-/* Fin de estilos generales del footer*/
-    
-    @media only screen and (max-width: 380px) { 
-        .galeria{
+
+    /* Fin de estilos generales del footer*/
+
+    @media only screen and (max-width: 380px) {
+        .galeria {
             padding: 0;
             margin: 0;
             margin-bottom: 20px;
-            grid-template-rows: repeat(8,);
-            grid-template-columns: repeat(1,1fr)     
+            grid-template-rows: repeat(8, );
+            grid-template-columns: repeat(1, 1fr)
         }
 
-        .item1{
+        .item1 {
             margin-top: 20px;
         }
 
-        .item5{
+        .item5 {
             padding: 100px;
         }
 
-        .item6{
+        .item6 {
             padding: 100px;
         }
 
-        .item7{
+        .item7 {
             padding: 100px;
         }
-        .item8{
+
+        .item8 {
             padding: 100px;
             margin-bottom: 40px;
         }
-/* Inicio de estilos para la página de EMPRESAS*/
-        .jumbotron{
+
+        /* Inicio de estilos para la página de EMPRESAS*/
+        .jumbotron {
             height: 200px;
         }
 
-        .boxmodel{
+        .boxmodel {
             height: 750px;
             margin: 0;
             margin-bottom: 10px;
         }
-/*Fin de estilos para la página de EMPRESAS*/
 
-/*Inicio de estilos para Footer*/
-        footer{
-            font-size: 16px;
-            margin-top: 30px;
-            padding: 50px;
+        /*Fin de estilos para la página de EMPRESAS*/
+
+        /*Inicio de estilos para Footer*/
+        footer {
+            font-size: 18px;
+            margin-top: 20px;
+            width: 95%;
+            overflow: hidden;
+            padding: 100px;
             background-color: #44c7f4;
             letter-spacing: 5px;
             padding: 5px;
-            position: relative;
+            position: absolute;
         }
-/*Fin de estilos para Footer*/
 
-/*Inicio de estilos para orden jerarquico*/
-        h1{
+        footer i {
+            font-size: 25px;
+            color: #fff;
+            letter-spacing: 10px;
+            padding: 0;
+            margin-top: 20px;
+        }
+
+        /*Fin de estilos para Footer*/
+
+        /*Inicio de estilos para orden jerarquico*/
+        h1 {
             font-size: 20px;
         }
-        h2{
+
+        h2 {
             font-size: 20px;
         }
-        h3{
+
+        h3 {
             font-size: 20px;
         }
-        .portada p{
-            color:#fff
+
+        .portada p {
+            color: #fff
         }
     }
+
     /*Fin de estilos para orden jerarquico*/
 
     /*Inicio estilos pagina de PRODUCTOS*/
 
-        .futbol{
-            width: 100%;
-            height: 100px;
-            background-position: center;
-            background-size: cover;
-            margin-top: 10px;
-        }
+    .futbol {
+        width: 100%;
+        height: 100px;
+        background-position: center;
+        background-size: cover;
+        margin-top: 10px;
+    }
+
     /*Fin de estilos de página de PRODUCTOS*/
 
     /*Inicio de estilos de página de HISTORIA*/
 
-    .table{
+    .table {
         height: 400px;
-        
+
     }
-        
-      
-    
 
 
-    @media only screen and (min-width: 381px){
-        h1{
+
+    @media only screen and (min-width: 381px) {
+
+        h1 {
             font-size: 25px;
         }
 
-        h2{
+        h2 {
             font-size: 25px;
         }
-        h3{
+
+        h3 {
             font-size: 25px;
         }
-        .portada p{
+
+        .portada p {
             color: #d0d2d3;
+            font-size: 20px;
         }
-    
 
-        .galeria{
+
+        .galeria {
             padding: 0;
             margin: 0;
             margin-bottom: 20px;
-            grid-template-rows: repeat(8,);
-            grid-template-columns: repeat(1,1fr)   
-            
+            grid-template-rows: repeat(8, );
+            grid-template-columns: repeat(1, 1fr)
         }
-        
+
+
+
+        .item1 {
+            margin-top: 15px;
+        }
+
+        .item5 {
+            padding: 100px;
+        }
+
+        .item6 {
+            padding: 100px;
+        }
+
+        .item7 {
+            padding: 100px;
+        }
+
+        .item8 {
+            padding: 100px;
+            margin-bottom: 40px;
+        }
+
+        /*Inicia estilos del footer*/
+        footer {
+            font-size: 20px;
+            margin-top: 30px;
+            padding: 0;
+            width: 97%;
+            background-color: #44c7f4;
+            letter-spacing: 4px;
+            position: absolute;
+        }
+
+        footer i {
+            font-size: 22px;
+            color: #fff;
+            letter-spacing: 8px;
+            padding: 0;
+            margin-top: 20px;
+        }
+        /*Finaliza estilos del footer*/ 
+
+        /*Inicia estilos página de EMPRESAS*/
+        .boxmodel {
+            height: 660px;
+            margin: 0;
+            margin-bottom: 10px;
+            font-size: 16px;
+        }
+
+        .nleft {
+            background-image: url(../img/rm15.jpg);
+            height: 250px;
+            background-size: cover;
+            background-position: center;
+            width: 100%;
+            margin-top: 20px;
+        }
+        /*Finaliza estilos página de EMPRESAS*/
+
+        .jumbotron{
+            height: 200px;
+        }
+
+        .futbol {
+            height: 150px;
+            width: 100%;
+            background-position: center;
+            padding: 200px;
+            background-size: cover;
+        }
+
     }
 
-    .item1{
-        margin-top: 15px;
+    @media only screen and (min-width:500px){
+
+        .boxmodel {
+            height: 600px;
+            margin: 0;
+            margin-bottom: 10px;
+            font-size: 17px;
+        }
+
     }
 
-    .item5{
-        padding: 100px;
-    }
 
-    .item6{
-        padding: 100px;
-    }
 
-    .item7{
-        padding: 100px;
-    }
-    .item8{
-        padding: 100px;
-        margin-bottom: 40px;
-    }
-
-        
-
-    
-    @media only screen and (min-width:800px){
-        .galeria{
+    @media only screen and (min-width:800px) {
+        .galeria {
             grid-template-columns: repeat(2, 2fr);
         }
-        .item1{
-            grid-column: 1/2;
-            grid-row: 1/2;
-        }
-        .item2{
-            grid-column: 2/3;
-            grid-row: 1/2;
-        }
-        .item3{
-            grid-column: 1/2;
-            grid-row: 2/3;
-        }
-        .item4{
-            grid-column: 2/3;
-            grid-row: 2/3;
-        }
-        .item5{
-            grid-column: 1/2;
-            grid-row: 3/4;
-        }
-        .item6{
-            grid-column: 2/3;
-            grid-row: 3/4;
-        }
-        .item7{
-            grid-column: 1/2;
-            grid-row: 4/5;
-        }
-        .item8{
-            grid-column: 2/3;
-            grid-row: 4/5;
-        }
-    }
 
-  
-       
+        .item1 {
+            grid-column: 1/2;
+            grid-row: 1/2;
+        }
+
+        .item2 {
+            grid-column: 2/3;
+            grid-row: 1/2;
+        }
+
+        .item3 {
+            grid-column: 1/2;
+            grid-row: 2/3;
+        }
+
+        .item4 {
+            grid-column: 2/3;
+            grid-row: 2/3;
+        }
+
+        .item5 {
+            grid-column: 1/2;
+            grid-row: 3/4;
+        }
+
+        .item6 {
+            grid-column: 2/3;
+            grid-row: 3/4;
+        }
+
+        .item7 {
+            grid-column: 1/2;
+            grid-row: 4/5;
+        }
+
+        .item8 {
+            grid-column: 2/3;
+            grid-row: 4/5;
+        }
+
+        .boxmodel {
+            height: 300px;
+            margin: 0;
+            margin-bottom: 10px;
+            font-size: 16px;
+        }
+
+
+    }
